Create string property that contains truncated description.

--- a/src/main/Resources/Templates/index.html
+++ b/src/main/Resources/Templates/index.html
@@ -285,7 +285,7 @@
                                 </div>
                                 <h3 th:text="${disasterItems.name}"><a href="cause-detail.html">Build school
                                     for children</a></h3>
-                                <div><p th:text="${disasterItems.description}">Description Details</p>
+                                <div><p th:text="${disasterItems.shortDescription}">Description Details</p>
                                     <div>
                                         <div class="romana_cause_btn">
                                             <a href="donation.html" class="btn2">Donate Now</a>
