--- a/src/main/Resources/Templates/index-2.html
+++ b/src/main/Resources/Templates/index-2.html
@@ -15,7 +15,7 @@
         ***Favicon***
     ================================================================= -->
 
-    <link rel="shortcut icon" type="image/png" href="../static/images/fevicon.png">
+    <link rel="shortcut icon" type="image/png" href="../static/images/fevicon-old.png">
 
     <!-- ================================================================
         ***CSS File***
@@ -154,7 +154,7 @@
 ============================================================ -->
     <section class="romana_hero_area">
         <div class="hero_slider">
-            <div class="hero_slider_bg" style="background-image:url(static/images/slider_bg.jpg)">
+            <div class="hero_slider_bg" style="background-image:url(../static/images/slider_bg-old.jpg)">
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12">
