--- a/src/main/Resources/Templates/event.html
+++ b/src/main/Resources/Templates/event.html
@@ -15,7 +15,7 @@
         ***Favicon***
     ================================================================= -->
 
-    <link rel="shortcut icon" type="image/png" href="../static/images/fevicon.png">
+    <link rel="shortcut icon" type="image/png" href="../static/images/fevicon-old.png">
 
     <!-- ================================================================
         ***CSS File***
