Clean up homepage HTML.

--- a/src/main/Resources/Templates/index.html
+++ b/src/main/Resources/Templates/index.html
@@ -377,7 +377,7 @@
             <div class="container">
                 <div class="row ">
                     <div class="col-md-8 col-md-offset-1 col-sm-9">
-                        <h2>Lest make the world better togethers.</h2>
+                        <h2>Lets make the world better together.</h2>
                     </div>
                     <!-- column End -->
                     <div class="col-sm-3">
@@ -669,7 +669,7 @@
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="footer_widget footer_widget_text">
-                                <a href="index-2.html"><img th:src="@{../images/logo.png}" alt="logo"></a>
+                                <a href="index-2.html"><img th:src="@{../images/logo-reversed.png}" alt="logo"></a>
                                 <p>Replanting hope, around the world and in your neighborhood.</p>
                                 <a href="#"><span><i class="fa fa-map-marker" aria-hidden="true"></i></span>Grant Ave.
                                     Central New Road, 8360</a>
