Create method and page for details.

--- a/src/main/Resources/Templates/blog.html
+++ b/src/main/Resources/Templates/blog.html
@@ -119,7 +119,7 @@
                                 <li><a href="#">blog</a>
                                     <ul class="sub_menu">
                                         <li><a href="blog.html">blog page</a></li>
-                                        <li><a href="blog-detail.html">blog detail</a></li>
+                                        <li><a href="disasterdetails.html">blog detail</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="contact.html">contact</a></li>
@@ -174,7 +174,7 @@
                     <div class="single_blog">
                         <div class="blog_img_1" style="background-image:url(static/images/blog_img1.jpg)"></div>
                         <div class="single_blog_text">
-                            <a href="blog-detail.html"><h3>Children national helping kids.</h3></a>
+                            <a href="disasterdetails.html"><h3>Children national helping kids.</h3></a>
                             <div class="blog_btns">
                                 <a><i class="fa fa-user" aria-hidden="true"></i>Mashok Khan</a>
                                 <a><i class="fa fa-calendar" aria-hidden="true"></i>08th June, 2017</a>
@@ -182,7 +182,7 @@
                             <div class="blog_text">
                                 <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse consequat, vel illum dolore eu feugiat facilisis at vero.</p>
                                 <div class="blog_btn">
-                                    <a href="blog-detail.html" class="btn2">view detail</a>
+                                    <a href="disasterdetails.html" class="btn2">view detail</a>
                                 </div>
                             </div>
                         </div>
@@ -191,7 +191,7 @@
                     <div class="single_blog">
                         <div class="blog_img_1" style="background-image:url(static/images/blog_img2.jpg)"></div>
                         <div class="single_blog_text">
-                            <a href="blog-detail.html"><h3>How to use international network</h3></a>
+                            <a href="disasterdetails.html"><h3>How to use international network</h3></a>
                             <div class="blog_btns">
                                 <a><i class="fa fa-user" aria-hidden="true"></i>Mashok Khan</a>
                                 <a><i class="fa fa-calendar" aria-hidden="true"></i>08th June, 2017</a>
@@ -199,7 +199,7 @@
                             <div class="blog_text">
                                 <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse consequat, vel illum dolore eu feugiat facilisis at vero.</p>
                                 <div class="blog_btn">
-                                    <a href="blog-detail.html" class="btn2">view detail</a>
+                                    <a href="disasterdetails.html" class="btn2">view detail</a>
                                 </div>
                             </div>
                         </div>
@@ -208,7 +208,7 @@
                     <div class="single_blog">
                         <div class="blog_img_1" style="background-image:url(static/images/blog_img4.jpg)"></div>
                         <div class="single_blog_text">
-                            <a href="blog-detail.html"><h3>Children national helping kids.</h3></a>
+                            <a href="disasterdetails.html"><h3>Children national helping kids.</h3></a>
                             <div class="blog_btns">
                                 <a><i class="fa fa-user" aria-hidden="true"></i>Mashok Khan</a>
                                 <a><i class="fa fa-calendar" aria-hidden="true"></i>08th June, 2017</a>
@@ -216,7 +216,7 @@
                             <div class="blog_text">
                                 <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse consequat, vel illum dolore eu feugiat facilisis at vero.</p>
                                 <div class="blog_btn">
-                                    <a href="blog-detail.html" class="btn2">view detail</a>
+                                    <a href="disasterdetails.html" class="btn2">view detail</a>
                                 </div>
                             </div>
                         </div>
@@ -225,7 +225,7 @@
                     <div class="single_blog">
                         <div class="blog_img_1" style="background-image:url(static/images/blog_img5.jpg)"></div>
                         <div class="single_blog_text">
-                            <a href="blog-detail.html"><h3>How to use international network</h3></a>
+                            <a href="disasterdetails.html"><h3>How to use international network</h3></a>
                             <div class="blog_btns">
                                 <a><i class="fa fa-user" aria-hidden="true"></i>Mashok Khan</a>
                                 <a><i class="fa fa-calendar" aria-hidden="true"></i>08th June, 2017</a>
@@ -233,7 +233,7 @@
                             <div class="blog_text">
                                 <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse consequat, vel illum dolore eu feugiat facilisis at vero.</p>
                                 <div class="blog_btn">
-                                    <a href="blog-detail.html" class="btn2">view detail</a>
+                                    <a href="disasterdetails.html" class="btn2">view detail</a>
                                 </div>
                             </div>
                         </div>
@@ -245,7 +245,7 @@
                     <div class="single_blog">
                         <div class="blog_img_1" style="background-image:url(static/images/blog_img6.jpg)"></div>
                         <div class="single_blog_text">
-                            <a href="blog-detail.html"><h3>How to use international network</h3></a>
+                            <a href="disasterdetails.html"><h3>How to use international network</h3></a>
                             <div class="blog_btns">
                                 <a><i class="fa fa-user" aria-hidden="true"></i>Mashok Khan</a>
                                 <a><i class="fa fa-calendar" aria-hidden="true"></i>08th June, 2017</a>
@@ -253,7 +253,7 @@
                             <div class="blog_text">
                                 <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse consequat, vel illum dolore eu feugiat facilisis at vero.</p>
                                 <div class="blog_btn">
-                                    <a href="blog-detail.html" class="btn2">view detail</a>
+                                    <a href="disasterdetails.html" class="btn2">view detail</a>
                                 </div>
                             </div>
                         </div>
@@ -262,7 +262,7 @@
                     <div class="single_blog">
                         <div class="blog_img_1" style="background-image:url(static/images/blog_img7.jpg)"></div>
                         <div class="single_blog_text">
-                            <a href="blog-detail.html"><h3>Children national helping kids.</h3></a>
+                            <a href="disasterdetails.html"><h3>Children national helping kids.</h3></a>
                             <div class="blog_btns">
                                 <a><i class="fa fa-user" aria-hidden="true"></i>Mashok Khan</a>
                                 <a><i class="fa fa-calendar" aria-hidden="true"></i>08th June, 2017</a>
@@ -270,7 +270,7 @@
                             <div class="blog_text">
                                 <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse consequat, vel illum dolore eu feugiat facilisis at vero.</p>
                                 <div class="blog_btn">
-                                    <a href="blog-detail.html" class="btn2">view detail</a>
+                                    <a href="disasterdetails.html" class="btn2">view detail</a>
                                 </div>
                             </div>
                         </div>
@@ -279,7 +279,7 @@
                     <div class="single_blog">
                         <div class="blog_img_1" style="background-image:url(static/images/blog_img8.jpg)"></div>
                         <div class="single_blog_text">
-                            <a href="blog-detail.html"><h3>How to use international network</h3></a>
+                            <a href="disasterdetails.html"><h3>How to use international network</h3></a>
                             <div class="blog_btns">
                                 <a><i class="fa fa-user" aria-hidden="true"></i>Mashok Khan</a>
                                 <a><i class="fa fa-calendar" aria-hidden="true"></i>08th June, 2017</a>
@@ -287,7 +287,7 @@
                             <div class="blog_text">
                                 <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse consequat, vel illum dolore eu feugiat facilisis at vero.</p>
                                 <div class="blog_btn">
-                                    <a href="blog-detail.html" class="btn2">view detail</a>
+                                    <a href="disasterdetails.html" class="btn2">view detail</a>
                                 </div>
                             </div>
                         </div>
@@ -296,7 +296,7 @@
                     <div class="single_blog">
                         <div class="blog_img_1" style="background-image:url(static/images/blog_img9.jpg)"></div>
                         <div class="single_blog_text">
-                            <a href="blog-detail.html"><h3>How to use international network</h3></a>
+                            <a href="disasterdetails.html"><h3>How to use international network</h3></a>
                             <div class="blog_btns">
                                 <a><i class="fa fa-user" aria-hidden="true"></i>Mashok Khan</a>
                                 <a><i class="fa fa-calendar" aria-hidden="true"></i>08th June, 2017</a>
@@ -304,7 +304,7 @@
                             <div class="blog_text">
                                 <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse consequat, vel illum dolore eu feugiat facilisis at vero.</p>
                                 <div class="blog_btn">
-                                    <a href="blog-detail.html" class="btn2">view detail</a>
+                                    <a href="disasterdetails.html" class="btn2">view detail</a>
                                 </div>
                             </div>
                         </div>
