--- a/src/main/Resources/Templates/causes-detail.html
+++ b/src/main/Resources/Templates/causes-detail.html
@@ -125,7 +125,7 @@
                                 <li><a href="#">blog</a>
                                     <ul class="sub_menu">
                                         <li><a href="blog.html">blog page</a></li>
-                                        <li><a href="blog-detail.html">blog detail</a></li>
+                                        <li><a href="disasterdetails.html">blog detail</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="contact.html">contact</a></li>
