--- a/src/main/Resources/Templates/index-2.html
+++ b/src/main/Resources/Templates/index-2.html
@@ -125,7 +125,7 @@
                                 <li><a href="#">blog</a>
                                     <ul class="sub_menu">
                                         <li><a href="blog.html">blog page</a></li>
-                                        <li><a href="blog-detail.html">blog detail</a></li>
+                                        <li><a href="disasterdetails.html">blog detail</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="contact.html">contact</a></li>
@@ -582,7 +582,7 @@
                     <div class="single_blog">
                         <div class="blog_img_1" style="background-image:url(static/images/blog_img1.jpg)"></div>
                         <div class="single_blog_text">
-                            <a href="blog-detail.html"><h3>Children national helping kids.</h3></a>
+                            <a href="disasterdetails.html"><h3>Children national helping kids.</h3></a>
                             <div class="blog_btns">
                                 <a><i class="fa fa-user" aria-hidden="true"></i>Mashok Khan</a>
                                 <a><i class="fa fa-calendar" aria-hidden="true"></i>08th June, 2017</a>
@@ -590,7 +590,7 @@
                             <div class="blog_text">
                                 <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse consequat, vel illum dolore eu feugiat nulla facilisis at vero.</p>
                                 <div class="blog_btn">
-                                    <a href="blog-detail.html" class="btn2">view detail</a>
+                                    <a href="disasterdetails.html" class="btn2">view detail</a>
                                 </div>
                             </div>
                         </div>
@@ -598,7 +598,7 @@
                     <div class="single_blog">
                         <div class="blog_img_1" style="background-image:url(static/images/blog_img2.jpg)"></div>
                         <div class="single_blog_text">
-                            <a href="blog-detail.html"><h3>How to use international network</h3></a>
+                            <a href="disasterdetails.html"><h3>How to use international network</h3></a>
                             <div class="blog_btns">
                                 <a><i class="fa fa-user" aria-hidden="true"></i>Mashok Khan</a>
                                 <a><i class="fa fa-calendar" aria-hidden="true"></i>08th June, 2017</a>
@@ -606,7 +606,7 @@
                             <div class="blog_text">
                                 <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse consequat, vel illum dolore eu feugiat nulla facilisis at vero.</p>
                                 <div class="blog_btn">
-                                    <a href="blog-detail.html" class="btn2">view detail</a>
+                                    <a href="disasterdetails.html" class="btn2">view detail</a>
                                 </div>
                             </div>
                         </div>
@@ -617,7 +617,7 @@
                     <div class="single_blog">
                         <div class="blog_img_2" style="background-image:url(static/images/blog_img3.jpg)"></div>
                         <div class="single_blog_text">
-                            <a href="blog-detail.html"><h3>Gardening blog post title here</h3></a>
+                            <a href="disasterdetails.html"><h3>Gardening blog post title here</h3></a>
                             <div class="blog_btns">
                                 <a><i class="fa fa-user" aria-hidden="true"></i>Mashok Khan</a>
                                 <a><i class="fa fa-calendar" aria-hidden="true"></i>08th June, 2017</a>
@@ -625,7 +625,7 @@
                             <div class="blog_text">
                                 <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit ameas molestie consequat, vel illum dolore eu feugiat nulla facilisis at eros.</p>
                                 <div class="blog_btn">
-                                    <a href="blog-detail.html" class="btn2">view detail</a>
+                                    <a href="disasterdetails.html" class="btn2">view detail</a>
                                 </div>
                             </div>
                         </div>
