--- a/src/main/Resources/Templates/index.html
+++ b/src/main/Resources/Templates/index.html
@@ -115,7 +115,7 @@
                             <li><a href="#">blog</a>
                                 <ul class="sub_menu">
                                     <li><a href="blog.html">blog page</a></li>
-                                    <li><a href="blog-detail.html">blog detail</a></li>
+                                    <li><a href="disasterdetails.html">blog detail</a></li>
                                 </ul>
                             </li>
                             <li class="search_expand"><a href="#"><i class="fa fa-search"></i></a>
@@ -277,7 +277,7 @@
                                 <div><p th:text="${disasterItems.shortDescription}">Description Details</p>
                                     <div>
                                         <div class="romana_cause_btn">
-                                            <a href="donation.html" class="btn2">More Details</a>
+                                            <a th:href="@{/details/} + ${disasterItems.id}" class="btn2">More Details</a>
                                         </div>
                                     </div>
                                 </div>
@@ -579,7 +579,7 @@
         <!--<div class="single_blog">-->
         <!--<div class="blog_img_1" style="background-image:url(static/images/blog_img1.jpg)"></div>-->
         <!--<div class="single_blog_text">-->
-        <!--<a href="blog-detail.html"><h3>Children national helping kids.</h3></a>-->
+        <!--<a href="disasterdetails.html"><h3>Children national helping kids.</h3></a>-->
         <!--<div class="blog_btns">-->
         <!--<a><i class="fa fa-user" aria-hidden="true"></i>Mashok Khan</a>-->
         <!--<a><i class="fa fa-calendar" aria-hidden="true"></i>08th June, 2017</a>-->
@@ -587,7 +587,7 @@
         <!--<div class="blog_text">-->
         <!--<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse consequat, vel illum dolore eu feugiat nulla facilisis at vero.</p>-->
         <!--<div class="blog_btn">-->
-        <!--<a href="blog-detail.html" class="btn2">view detail</a>-->
+        <!--<a href="disasterdetails.html" class="btn2">view detail</a>-->
         <!--</div>-->
         <!--</div>-->
         <!--</div>-->
@@ -595,7 +595,7 @@
         <!--<div class="single_blog">-->
         <!--<div class="blog_img_1" style="background-image:url(static/images/blog_img2.jpg)"></div>-->
         <!--<div class="single_blog_text">-->
-        <!--<a href="blog-detail.html"><h3>How to use international network</h3></a>-->
+        <!--<a href="disasterdetails.html"><h3>How to use international network</h3></a>-->
         <!--<div class="blog_btns">-->
         <!--<a><i class="fa fa-user" aria-hidden="true"></i>Mashok Khan</a>-->
         <!--<a><i class="fa fa-calendar" aria-hidden="true"></i>08th June, 2017</a>-->
@@ -603,7 +603,7 @@
         <!--<div class="blog_text">-->
         <!--<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse consequat, vel illum dolore eu feugiat nulla facilisis at vero.</p>-->
         <!--<div class="blog_btn">-->
-        <!--<a href="blog-detail.html" class="btn2">view detail</a>-->
+        <!--<a href="disasterdetails.html" class="btn2">view detail</a>-->
         <!--</div>-->
         <!--</div>-->
         <!--</div>-->
@@ -614,7 +614,7 @@
         <!--<div class="single_blog">-->
         <!--<div class="blog_img_2" style="background-image:url(static/images/blog_img3.jpg)"></div>-->
         <!--<div class="single_blog_text">-->
-        <!--<a href="blog-detail.html"><h3>Gardening blog post title here</h3></a>-->
+        <!--<a href="disasterdetails.html"><h3>Gardening blog post title here</h3></a>-->
         <!--<div class="blog_btns">-->
         <!--<a><i class="fa fa-user" aria-hidden="true"></i>Mashok Khan</a>-->
         <!--<a><i class="fa fa-calendar" aria-hidden="true"></i>08th June, 2017</a>-->
@@ -622,7 +622,7 @@
         <!--<div class="blog_text">-->
         <!--<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit ameas molestie consequat, vel illum dolore eu feugiat nulla facilisis at eros.</p>-->
         <!--<div class="blog_btn">-->
-        <!--<a href="blog-detail.html" class="btn2">view detail</a>-->
+        <!--<a href="disasterdetails.html" class="btn2">view detail</a>-->
         <!--</div>-->
         <!--</div>-->
         <!--</div>-->
